<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.hockey.MainActivity">

    <View
        android:id="@+id/viewBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#D50000"
        android:visibility="invisible"></View>

    <LinearLayout

        android:id="@+id/countdown_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <ImageView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:src="@drawable/hockey" />

        <TextView
            android:id="@+id/countdown_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:layout_weight="2"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/time_txt"
            android:textColor="#000000"
            android:textSize="50sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:src="@drawable/hockey" />

    </LinearLayout>

    <TextView
        android:id="@+id/penalties_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/countdown_layout"
        android:gravity="center"
        android:text="@string/penalties_txt"
        android:textStyle="bold" />


    <LinearLayout
        android:id="@+id/penalties_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/penalties_txt"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">


            <TextView
                android:id="@+id/firstPenaltiesForTeamA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                tools:text="2:00" />

            <TextView
                android:id="@+id/secondPenaltiesForTeamA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                tools:text="5:00" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">


            <TextView
                android:id="@+id/firstPenaltiesForTeamB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                tools:text="2:00" />

            <TextView
                android:id="@+id/secondPenaltiesForTeamB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                tools:text="5:00" />


        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/penalties_layout"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/TeamA_txt"
                android:textColor="#616161"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_team_a_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/scoreA_txt"
                android:textColor="#616161"
                android:textSize="56sp"
                android:textStyle="bold" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp"
                android:layout_marginTop="4dp"
                android:onClick="addGoalForTeamA"
                android:text="@string/A3_btn" />

            <Button
                android:id="@+id/twoMinForTeamA_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp"
                android:layout_marginTop="4dp"
                android:onClick="addTwoForTeamA"
                android:text="@string/A2_btn" />

            <Button
                android:id="@+id/fiveMinForTeamA_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp"
                android:layout_marginTop="4dp"
                android:onClick="addOneForTeamA"
                android:text="@string/A1_btn" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray">

        </View>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/TeamB_txt"
                android:textColor="#616161"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_team_b_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/scoreB_txt"
                android:textColor="#616161"
                android:textSize="56sp"
                android:textStyle="bold" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp"
                android:layout_marginTop="4dp"
                android:onClick="addGoalForTeamB"
                android:text="@string/B3_btn" />

            <Button
                android:id="@+id/twoMinForTeamB_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp"
                android:layout_marginTop="4dp"
                android:onClick="addTwoForTeamB"
                android:text="@string/B2_btn" />

            <Button
                android:id="@+id/fiveMinForTeamB_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp"
                android:layout_marginTop="4dp"
                android:onClick="addOneForTeamB"
                android:text="@string/B1_btn" />
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/linearHorizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/resetScoreButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:onClick="resetScore"
            android:text="@string/reset_btn" />

        <Button
            android:id="@+id/countdown_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:text="@string/countdown_Start_btn" />

    </LinearLayout>


</RelativeLayout>